--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ requires = ["poetry>=0.12"]
 
 [tool]
 [tool.poetry]
-authors = ["Your Name <you@example.com>"]
+authors = ["Olugbemi Tolulope"]
 description = ""
-name = "django-template"
+name = "pickr"
 version = "0.1.0"
 [tool.poetry.dependencies]
 Django = "^3.0"
