--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["poetry>=0.12"]
 [tool]
 [tool.poetry]
 authors = ["Olugbemi Tolulope"]
-description = ""
+description = "This is a photo feeds app for designers"
 name = "pickr"
 version = "0.1.0"
 [tool.poetry.dependencies]
